# OpenCL-Math

./: .gitignore  CMakeLists.txt  Doxygen Config  LICENSE.txt  README  linearalgebra.h  main.c
